--- a/eventex/core/templates/400.html
+++ b/eventex/core/templates/400.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block title %}{% endblock title %}
+{% block content %}{% endblock content %}
 {% load static %}
 <!DOCTYPE html>
 <html>
