--- a/eventex/core/static/css/main.css
+++ b/eventex/core/static/css/main.css
@@ -365,6 +365,15 @@ section header h2 {
     border-color: #d0e9c6;
 }
 
+.speakers h2 {
+    text-transform: uppercase;
+}
+
+.speakers img {
+    width: 200 px;
+    border-radius: 100%;
+}
+
 .speakers img.photo{
     float: left;
     padding-right: 15 px;
