--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -63,7 +63,11 @@
                 {% for speaker in speakers %}
                 <div>
                     <img src="{{speaker.photo}}">
-                    <h4>{{ speaker.name }}</h4>
+                    <h4> 
+                        <a href="{{ speaker.get_absolute_url }}">
+                            {{ speaker.name }}
+                        </a>
+                    </h4>
                 </div>
                 {% endfor %}
             </div>
