--- a/eventex/core/templates/core/talk_list.html
+++ b/eventex/core/templates/core/talk_list.html
@@ -16,6 +16,13 @@
         {% empty %}
             <p> Ainda não existem palestras de tarde </p>
         {%endfor%}
+
+        <h2>Mini-Cursos</h2>
+        {% for course in courses %}
+        {% include 'core/talk_list_snippet.html' with talk=course only%}
+        {% endfor %}
+
+        <p>Descrição do curso</p>
     </div>
 </section>
 {% endblock content %}
